--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,4 +16,15 @@
     rgb(9, 117, 119)
   }
 
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
   
+  ::-webkit-scrollbar-thumb {
+    background: rgba(136, 136, 136, 0.281);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
