--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,30 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
 
-.App{
-    min-height:100vh;
-    display:flex;
-    background-image : url('./people.jpg');
-     background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat;
-
+.App {
+  min-height: 100vh;
+  display: flex;
+  background-image: url("./background.png");
+  background-position: center;
+  background-size: cover;
 }
-.white-placeholder::placeholder {
-    color: 
-    /* rgb(103, 234, 237) */
-   
-    rgb(9, 117, 119)
-  }
 
-  ::-webkit-scrollbar {
-    width: 0px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: rgba(136, 136, 136, 0.281);
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.281);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
